fix(install): Update roles multiOS

--- a/ansible/playbooks/mac-devops.yml
+++ b/ansible/playbooks/mac-devops.yml
@@ -10,5 +10,8 @@
   roles:
     - common-mac-devops-desktop
     - aws-vpn-client
+    - azurecli
+    - cloud-sql-proxy
+    - mimirtool
 
   tasks:
