--- a/ansible/requirements_mac.yml
+++ b/ansible/requirements_mac.yml
@@ -29,6 +29,9 @@ roles:
 - name: docker
   src: https://github.com/hackwish/ansible-docker.git
 
+- name: bruno
+  src: https://github.com/hackwish/ansible-bruno.git
+
 # DevOps Cloud Roles
 - name: aws-vpn-client
   src: https://github.com/hackwish/ansible-aws-vpn-client.git
