--- a/ansible/playbooks/devops.yml
+++ b/ansible/playbooks/devops.yml
@@ -38,6 +38,7 @@
   - tfenv
   - tfswitch
   - velero-io
+  - bruno
   tasks:
   - name: Config git user
     shell: git config --global color.ui true && git config --global user.email "{{ item }}@{{ ansible_fqdn }}" && git config --global user.name "{{ item }}" && git config --global init.defaultBranch main
